# abelohost

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  docker-compose-alloy.yml  docker-compose-app.dev.yml  docker-compose-app.yml  docker-compose-grafana.yml  docker-compose-kafka.yml  docker-compose-loki.yml  docker-compose-node-exporter.yml  docker-compose-prometheus.yml  docker-compose-promtail.yml  docker-compose-statsd.yml  docker-compose-telegraf.yml  docker-compose-wrk.yml  docker-compose.yml  pyproject.toml  start.sh
backend/: Dockerfile  alembic.ini  entrypoint.sh
backend/alembic/: env.py
backend/alembic/versions/: f938e77056d0_auto_generated_migration.py
backend/app/: main.py
backend/app/api/system/: deps.py  router.py
backend/app/api/system/endpoints/: db.py  health.py  seed.py
backend/app/api/v1/: deps.py  router.py
backend/app/api/v1/endpoints/: message.py
backend/app/api/v1/schemas/: __init__.py  message.py
backend/app/api/v2/: deps.py  router.py
backend/app/api/v2/endpoints/: message.py
backend/app/api/v3/: deps.py  router.py
backend/app/api/v3/endpoints/: message.py
backend/app/api/v3/schemas/: message.py
backend/app/application/repositories/: message.py
backend/app/application/use_cases/: create_message.py  get_message.py
backend/app/core/: config.py  logging_config.py
backend/app/db/: annotations.py  asyncpg_pool.py  base.py  deps.py  session.py
backend/app/domain/entities/: message.py
backend/app/domain/exceptions/: message.py
backend/app/domain/tests/: test_message_domain.py
backend/app/domain/value_objects/: message.py
backend/app/exceptions/: base.py  database.py  handlers.py  http_exceptions.py
backend/app/infra/adapters/: asyncpg_message_repository.py  in_memory_message_repository.py  sql_alchemy_message_repository.py
backend/app/infra/db/: models.py
backend/app/infra/kafka/: kafka_producer.py
backend/app/middleware/: logging.py
backend/app/utile/: parsing_path.py
backend/tests/: conftest.py  test_metrics.py
observability/alloy/: config.alloy
observability/grafana/dashboards/: abelo-dashboard-2.json  abelo-dashboard-statsd.json  abelo-dashboard.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/loki/: local-config.yaml
observability/prometheus/: prometheus.yml
observability/prometheus/rules/: alerts.yml
observability/promtail/: config.yaml
observability/statsd/: mapping.yaml
observability/telegraf/: telegraf.conf
postgres_config/: postgresql.conf
scripts/: apply_migration.py  make_new_migration.py
wrk_lua/: post.lua
