[project]
name = "abelohost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
main = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.3",
    "granian>=2.7.2",
    "itsdangerous>=2.2.0",
    "orjson>=3.11.8",
    "pydantic-settings>=2.13.1",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "uuid7>=0.1.0",
]
